Kotlin Gradle file, fix some warnings